--- a/Kaggle_House_Prices/Model.ipynb
+++ b/Kaggle_House_Prices/Model.ipynb
@@ -145,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1a161438>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a20270ac8>"
       ]
      },
      "execution_count": 7,
@@ -179,7 +179,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0xe1942bc50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a20318a90>"
       ]
      },
      "execution_count": 8,
@@ -211,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1a3ca080>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a204e6c88>"
       ]
      },
      "execution_count": 9,
@@ -291,8 +291,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# label encoder\n",
     "label_encode_col = [\"PoolQC\", \"FireplaceQu\", \"GarageType\", \"BsmtCond\", \"BsmtQual\", \"BsmtExposure\", \"GarageCond\", \"BsmtFinType1\", \"BsmtFinType2\"]\n",
-    "for col in label_encode_col:\n",
+    "categorical_col = []\n",
+    "for col in all_data.columns:\n",
+    "    if all_data[col].dtype==\"O\":\n",
+    "        categorical_col.append(col)\n",
+    "label_encode_col_final = label_encode_col+categorical_col\n",
+    "        \n",
+    "for col in label_encode_col_final:\n",
     "    all_data[col] = all_data[col].astype(\"category\")\n",
     "    all_data[col] = all_data[col].cat.codes"
    ]
@@ -315,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,12 +372,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "gbm = lgb.LGBMRegressor(objective='regression',\n",
-    "                        metric='mape',\n",
+    "                        metric='rmsle',\n",
     "                        num_leaves=80,\n",
     "                        learning_rate=0.03,\n",
     "                        n_estimators=6769,\n",
@@ -378,6 +385,43 @@
     "                       max_depth = 18,\n",
     "                       subsample = 0.7241144257909466)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gbm.fit(X_train, train_y)\n",
+    "y_pred = gbm.predict(X_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1284119872568456"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rmsle(valid_y, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
